--- a/.github/workflows/pull-request-check.yml
+++ b/.github/workflows/pull-request-check.yml
@@ -22,7 +22,7 @@ jobs:
       uses: actions/cache@v3
       with:
         path: ~/.nuget/packages
-        key: ${{ runner.os }}-nuget-${{ hasfiles(`**/*.csproj`) }}
+        key: ${{ runner.os }}-nuget-${{ hasfiles('**/*.csproj') }}
         restore-keys: |
           ${{ runner.os }}-nuget-
     
